# ------------------------------------------------------------------------------
# Project : PyPlate                                                /          \
# Filename: pyproject.toml                                        |     ()     |
# Date    : 01/09/2026                                            |            |
# Author  : cyclopticnerve                                        |   \____/   |
# License : WTFPLv2                                                \          /
# ------------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=78.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPlate"
version = "1.1.4"
description = "A program for creating and building CLI/GUI/Package projects in Python from a template"
authors = [{ name = "cyclopticnerve", email = "cyclopticnerve@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = []
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/cyclopticnerve/PyPlate"

[tool.setuptools]
packages = ["src"]

# -)
