# ------------------------------------------------------------------------------
# Project : __CN_BIG_NAME__                                        /          \
# Filename: pyproject.toml                                        |     ()     |
# Date    : __CN_DATE__                                           |            |
# Author  : __CN_AUTHOR__                                         |   \____/   |
# License : __CN_LICENSE__                                         \          /
# ------------------------------------------------------------------------------

[build-system]
requires = [
    "setuptools>=59.6.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "__CN_SMALL_NAME__"
version = "0.1.0"
description = "__CN_SHORT_DESC__"
readme = "README.md"
authors = [
    {name = "__CN_AUTHOR__ ", email = "__CN_AUTHOR_EMAIL__"}
]
license = {file = "LICENSE"}
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    # __CN_KEYWORDS__
]
dependencies = [
    # __CN_PY_DEPS__
] 
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/__CN_AUTHOR__ /__CN_BIG_NAME__"

# -)
