# ------------------------------------------------------------------------------
# Project : __PP_NAME_BIG__                                        /          \
# Filename: pyproject.toml                                        |     ()     |
# Date    : __PP_DATE__                                           |            |
# Author  : cyclopticnerve                                        |   \____/   |
# License : WTFPLv2                                                \          /
# ------------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=59.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "A"
version = "0"
description = ""
readme = "README.md"
authors = [{ name = "cyclopticnerve", email = "cyclopticnerve@gmail.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
]
dependencies = [
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/cyclopticnerve/__PP_NAME_BIG__"

# -)
