# ------------------------------------------------------------------------------
# Project : PyPlate                                                /          \
# Filename: pyproject.toml                                        |     ()     |
# Date    : 10/05/2023                                            |            |
# Author  : cyclopticnerve                                        |   \____/   |
# License : WTFPLv2                                                \          /
# ------------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=59.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# NB: some of these values would normally come from pymaker, but since this IS
# pymaker, we need to enter it manually (aka bootstrap)
name = "cnlib"
version = "0.0.1"
description = "A package for helping create projects in PyPlate"
authors = [{ name = "cyclopticnerve", email = "cyclopticnerve@gmail.com" }]
# readme = "README.md"
# license = { file = "LICENSE.txt" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    "Python",
    "cli",
    "gui",
    "package",
    "gtk3",
    "gtk",
    "PyGObject",
    "PyGTK",
    "Python-GTK+",
    "template",
    "app",
]
dependencies = []
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/cyclopticnerve/PyPlate"

# -)
