# ------------------------------------------------------------------------------
# Project : CNLib                                                  /          \
# Filename: pyproject.toml                                        |     ()     |
# Date    : 10/05/2023                                            |            |
# Author  : cyclopticnerve                                        |   \____/   |
# License : WTFPLv2                                                \          /
# ------------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=78.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CNLib"
version = "0.0.1"
description = "A library for creating CLI/Package/GUI projects in Python from a template"
authors = [{ name = "cyclopticnerve", email = "cyclopticnerve@gmail.com" }]
# readme = "README.md"
# license = { file = "LICENSE.txt" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    "Python",
    "cli",
    "gui",
    "package",
    "gtk3",
    "gtk",
    "PyGObject",
    "PyGTK",
    "Python-GTK+",
    "template",
    "app",
]
dependencies = []
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/cyclopticnerve/CNLib"

# -)
