# ------------------------------------------------------------------------------
# Project : __PP_NAME_PRJ_BIG__                                    /          \
# Filename: pyproject.toml                                        |     ()     |
# Date    : __PP_DATE__                                           |            |
# Author  : __PP_AUTHOR__                                         |   \____/   |
# License : __PP_LICENSE_NAME__                                    \          /
# ------------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=59.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "__PP_NAME_PRJ_SMALL__"
version = "__PP_VERSION__"
description = "__PP_SHORT_DESC__"
authors = [{ name = "__PP_AUTHOR__", email = "__PP_EMAIL__" }]
readme = "__PP_README_FILE__"
license = { file = "__PP_LICENSE_FILE__" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["__PP_KW_STR__"]
dependencies = []
requires-python = ">=3.10"

[project.urls]
homepage = "__PP_URL__/__PP_NAME_PRJ_BIG__"

# -)
