# ------------------------------------------------------------------------------
# Project : __PP_NAME_PRJ_BIG__                                    /          \
# Filename: pyproject.toml                                        |     ()     |
# Date    : __PP_DATE__                                           |            |
# Author  : __PP_AUTHOR__                                         |   \____/   |
# License : __PP_LICENSE_NAME__                                    \          /
# ------------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=78.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "__PP_NAME_PRJ_BIG__"
version = "0.0.5"
description = "A program for creating and building CLI/GUI/Packages in Python from a template"
authors = [{ name = "__PP_AUTHOR__", email = "__PP_EMAIL__" }]
readme = "__PP_README_FILE__"
license = { file = "__PP_LICENSE_FILE__" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["python", "cli", "template", "app", "package", "gui", "module", "gtk3"]
dependencies = []
requires-python = ">=3.10"

[project.urls]
homepage = "__PP_URL__/__PP_NAME_PRJ_BIG__"

# -)
