# ------------------------------------------------------------------------------
# Project : PyPlate                                                /          \
# Filename: pyproject.toml                                        |     ()     |
# Date    : 05/31/2026                                            |            |
# Author  : cyclopticnerve                                        |   \____/   |
# License : WTFPLv2                                                \          /
# ------------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=78.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPlate"
version = "1.2.3"
description = "A Short description"
authors = [{ name = "cyclopticnerve", email = "cyclopticnerve@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = []
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/cyclopticnerve/PyPlate"

[tool.setuptools]
packages = ["src"]

# -)
