# ------------------------------------------------------------------------------
# Project : __PP_NAME_BIG__                                        /          \
# Filename: pyproject.toml                                        |     ()     |
# Date    : __PP_DATE__                                           |            |
# Author  : __PP_AUTHOR__                                         |   \____/   |
# License : __PP_LICENSE__                                         \          /
# ------------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=59.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# some of these values will be replaced by either pymaker.py or pybaker.py
# they are only here to satisfy the linter
name = "__PP_NAME_BIG__"
version = "__PP_VERSION__"
description = "__PP_SHORT_DESC__"
authors = [{ name = "__PP_AUTHOR__", email = "__PP_EMAIL__" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = []
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/__PP_AUTHOR__/__PP_NAME_BIG__"

# -)
